--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vuelidate/validators": "^2.0.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.4",
     "core-js": "^3.8.3",
     "moment": "^2.29.4",
     "register-service-worker": "^1.7.2",
