--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue3-highlightjs": "^1.0.5",
     "vuelidate": "^0.7.7",
     "vuex": "^4.0.0"
   },
