--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@soerenmartius/vue3-clipboard": "^0.1.2",
     "@splidejs/vue-splide": "^0.6.12",
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
@@ -16,10 +17,11 @@
     "bootstrap-icons": "^1.10.4",
     "core-js": "^3.8.3",
     "moment": "^2.29.4",
+    "prismjs": "^1.29.0",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vue3-highlightjs": "^1.0.5",
+    "vue3-popper": "^1.5.0",
     "vuelidate": "^0.7.7",
     "vuex": "^4.0.0"
   },
