--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.4",
     "core-js": "^3.8.3",
+    "dropzone": "^6.0.0-beta.2",
     "moment": "^2.29.4",
     "prismjs": "^1.29.0",
     "register-service-worker": "^1.7.2",
